@@ -4,6 +4,8 @@ Changelog
 2.4.0 (TBD)
 -----------
 - Add replicas instead of slaves
+- Deprecated attributesToIndex
+- Add searchableAttributes to replace attributesToIndex
 
 2.3.0 (2016-08-22)
 ------------------
